--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         </div>
                         <div class="info">
                             <h3>Beefy Burgers</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -53,8 +53,8 @@
                         </div>
                         <div class="info">
                             <h3>Burger Boys</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
 
@@ -66,8 +66,8 @@
                         </div>
                         <div class="info">
                             <h3>Burger Bizz</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -78,8 +78,8 @@
                         </div>
                         <div class="info">
                             <h3>Crackles Burger</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
                         </div>
                         <div class="info">
                             <h3>Bull Burgers</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
 
@@ -103,8 +103,8 @@
                         </div>
                         <div class="info">
                             <h3>Rocket Burgers</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -115,8 +115,8 @@
                         </div>
                         <div class="info">
                             <h3>Smokin Burger</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -127,8 +127,8 @@
                         </div>
                         <div class="info">
                             <h3>Delish Burger</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -139,8 +139,8 @@
                         </div>
                         <div class="info">
                             <h3>Crackles Burger</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -151,8 +151,8 @@
                         </div>
                         <div class="info">
                             <h3>Bull Burgers</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <span>$5</span>
+                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
+                            <span>3200 AMD</span>
                         </div>
                     </div>
 
