--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
                             <img src="img/burger/1.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Beefy Burgers</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Burger</h3>
+                            <span>3500 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +51,8 @@
                             <img src="img/burger/2.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Burger Boys</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Cheeseburger</h3>
+                            <span>3800 AMD</span>
                         </div>
                     </div>
 
@@ -65,9 +63,8 @@
                             <img src="img/burger/3.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Burger Bizz</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Hot Dog</h3>
+                            <span>2000 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -77,9 +74,8 @@
                             <img src="img/burger/4.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Crackles Burger</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Sendwich</h3>
+                            <span>2500 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -89,9 +85,8 @@
                             <img src="img/burger/5.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Bull Burgers</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Fries</h3>
+                            <span>1000 AMD</span>
                         </div>
                     </div>
 
@@ -102,9 +97,8 @@
                             <img src="img/burger/6.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Rocket Burgers</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Pizzas</h3>
+                            <span>3000-5000 AMD</span>
                         </div>
                     </div>
                 </div>
@@ -114,48 +108,10 @@
                             <img src="img/burger/7.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Smokin Burger</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
+                            <h3>Compote</h3>
+                            <span>1500 AMD</span>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="single_delicious d-flex align-items-center">
-                        <div class="thumb">
-                            <img src="img/burger/8.png" alt="">
-                        </div>
-                        <div class="info">
-                            <h3>Delish Burger</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-md-6 col-lg-6">
-                    <div class="single_delicious d-flex align-items-center">
-                        <div class="thumb">
-                            <img src="img/burger/4.png" alt="">
-                        </div>
-                        <div class="info">
-                            <h3>Crackles Burger</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="single_delicious d-flex align-items-center">
-                        <div class="thumb">
-                            <img src="img/burger/5.png" alt="">
-                        </div>
-                        <div class="info">
-                            <h3>Bull Burgers</h3>
-                            <p>268 g beef grilled over fire, juicy tomatoes, Thousand Island dressing, mayonnaise, ketchup, crunchy pickles, fresh onion, sesame-seed bun.</p>
-                            <span>3200 AMD</span>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
