--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <img src="img/burger/4.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Sendwich</h3>
+                            <h3>Sandwich</h3>
                             <span>2500 AMD</span>
                         </div>
                     </div>
