--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col-xl-6 col-md-6 col-lg-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/1.png" alt="">
+                            <img src="img/food/burger.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Burger</h3>
@@ -48,7 +48,7 @@
                 <div class="col-md-6 col-lg-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/2.png" alt="">
+                            <img src="img/food/ch-burger.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Cheeseburger</h3>
@@ -60,7 +60,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/3.png" alt="">
+                            <img src="img/food/hotdog.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Hot Dog</h3>
@@ -71,7 +71,7 @@
                 <div class="col-xl-6 col-md-6 col-lg-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/4.png" alt="">
+                            <img src="img/food/sandwich.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Sandwich</h3>
@@ -82,19 +82,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/5.png" alt="">
-                        </div>
-                        <div class="info">
-                            <h3>Fries</h3>
-                            <span>1000 AMD</span>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="single_delicious d-flex align-items-center">
-                        <div class="thumb">
-                            <img src="img/burger/6.png" alt="">
+                            <img src="img/food/pizzas.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Pizzas</h3>
@@ -105,7 +93,31 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
-                            <img src="img/burger/7.png" alt="">
+                            <img src="img/food/fries.jpeg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Fries</h3>
+                            <span>1000 AMD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="single_delicious d-flex align-items-center" style="margin-bottom: 40px;">
+                        <div class="thumb">
+                            <img src="img/food/cake.jpeg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Strudel with ice cream /
+                                Brownie with ice cream
+                            </h3>
+                            <span>1500-2000 AMD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="single_delicious d-flex align-items-center" style="margin-bottom: 40px;">
+                        <div class="thumb">
+                            <img src="img/food/compote.jpeg" alt="">
                         </div>
                         <div class="info">
                             <h3>Compote</h3>
