--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <img src="img/food/pizzas.jpeg" alt="">
                         </div>
                         <div class="info">
-                            <h3>Pizzas</h3>
+                            <h3>Black/Green Tea</h3>
                             <span>3000-5000 AMD</span>
                         </div>
                     </div>
