--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+                <!-- <div class="col-lg-6 col-md-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
                             <img src="img/food/pizzas.jpeg" alt="">
                         </div>
                         <div class="info">
-                            <h3>Tan/Tomato Juice</h3>
+                            <h3>Pizzas</h3>
                             <span>3000-5000 AMD</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-6 col-md-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
@@ -110,7 +110,29 @@
                             <h3>Strudel with ice cream /
                                 Brownie with ice cream
                             </h3>
-                            <span>1500-2000 AMD</span>
+                            <span>1500 AMD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="single_delicious d-flex align-items-center" style="margin-bottom: 40px;">
+                        <div class="thumb">
+                            <img src="img/food/tea.jpeg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Black/Green tea</h3>
+                            <span>1000 AMD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="single_delicious d-flex align-items-center" style="margin-bottom: 40px;">
+                        <div class="thumb">
+                            <img src="img/food/tan.jpeg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Tan/Tomato Juice</h3>
+                            <span>1000 AMD</span>
                         </div>
                     </div>
                 </div>
