--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                         </div>
                         <div class="info">
                             <h3>Hot Dog</h3>
-                            <span>2000/2500 AMD</span>
+                            <span>2000 AMD<br />
+                                2500 AMD</span>
                         </div>
                     </div>
                 </div>
