--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <img style="position: absolute; top: 0;" src="img/logo.png" alt=""> 
-    <img style="position: absolute; top: 0; right: 0;" src="img/logo_r.png" alt=""> 
+    <img style="position: absolute; top: 0;" src="img/logo.png" alt="">
+    <img style="position: absolute; top: 0; right: 0;" src="img/logo_r.png" alt="">
 
     <!-- best_burgers_area_start  -->
     <div class="best_burgers_area">
@@ -145,6 +145,24 @@
                         <div class="info">
                             <h3>Compote</h3>
                             <span>1500 AMD</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6 col-md-6 col-lg-6">
+                    <div class="section_title text-center mb-80">
+                        <span>Hot Offer</span>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-6 col-lg-6">
+                    <div class="single_delicious d-flex align-items-center">
+                        <div class="thumb">
+                            <img src="img/food/combo.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <h3>Burger + Fries</h3>
+                            <span>4000 AMD</span>
                         </div>
                     </div>
                 </div>
