--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             </div>
             <div class="row">
                 <div class="col-xl-6 col-md-6 col-lg-6">
+                    <div style="margin-bottom: 65px;" class="single_delicious d-flex align-items-center">
+                        <div class="thumb">
+                            <img src="img/food/combo.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <span style="font-size: 18px;">Hot Offer</span>
+                            <h3>Burger + Fries</h3>
+                            <span>4000 AMD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-6 col-lg-6">
                     <div class="single_delicious d-flex align-items-center">
                         <div class="thumb">
                             <img src="img/food/burger.jpeg" alt="">
@@ -145,24 +157,6 @@
                         <div class="info">
                             <h3>Compote</h3>
                             <span>1500 AMD</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-6 col-md-6 col-lg-6">
-                    <div class="section_title text-center mb-80">
-                        <span>Hot Offer</span>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-md-6 col-lg-6">
-                    <div class="single_delicious d-flex align-items-center">
-                        <div class="thumb">
-                            <img src="img/food/combo.jpg" alt="">
-                        </div>
-                        <div class="info">
-                            <h3>Burger + Fries</h3>
-                            <span>4000 AMD</span>
                         </div>
                     </div>
                 </div>
